--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="general.css">
     <title>Home</title>
+
+    <!--- Favicon stuffs --->
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
+    <!--- Instructions for web scrapers --->
+    <meta name="robots" content="index, follow">
+
+    <meta name="description" content="The personal website of a cyber-nerd.">
+    <meta name="keywords" content="linux, technology, personal, portfolio, cyber, computers, programming, webdevelopment, developer">
+    <meta name="author" content="Jesper Berglund">
+
+    <!--- Facebook specific standard, but many websites use this so it has become almost standard to include --->
+    <meta property="og:site_name" content="JesBer">
+    <meta name="twitter:domain" property="twitter:domain" content="example.org">
+    <meta name="og:title" property="og:title" content="JesBer">
+    <meta property="og:description" content="The personal website of a cyber-nerd.">
+    <meta name="twitter:description" property="twitter:description" content="The personal website of a cyber-nerd.">
+    <meta name="og:image" content="https://www.jesber.xyz/website.png">
+
+    <!--- below is for twitter sharing previews--->
+    <!--- <meta property="twitter:card" content="https://age-that-represents-ylink-to-an-imour-site"> --->
+    <meta name="twitter:image:src" property="twitter:image:src" content="https://www.jesber.xyz/website.png">
+    <meta name="twitter:image" property="twitter:image" content="https://www.jesber.xyz/website.png">
+    <meta name="og:image:alt" property="og:image:alt" content="Website preview">
+
+    <meta property="og:url" content="example.org">
+    <meta property="og:type" content="website">
+
+
 </head>
 
     <nav>
@@ -41,7 +74,7 @@
                 and overall <span id="last"> cyber-nerd.</span>
             </p>
         </div>
-        <img src="src/img/kapushion.jpg" alt="NotMe">
+        <img src="src/img/kapushion.jpg" alt="/NotMe/">
     </section>
 
     <div id="triSep">
@@ -83,19 +116,19 @@
         <h1>Contact</h1>
         <div id="text">
 
-            <img src="src/img/phone.jpg" alt="phone">
+            <img src="src/img/phone.jpg" alt="/Phone/">
             <ul>
                 <li>
                     <a href="mailto: archer@jesber.xyz" target="_blank">Mail</a>
-                    <img src="src/img/mail.png" alt="githubIcon">
+                    <img src="src/img/mail.png" alt="/MailIcon/">
                 </li>
                 <li>
                     <a href="https://github.com/arch-err" target="_blank">GitHub</a>
-                    <img src="src/img/gh.jpg" alt="githubIcon">
+                    <img src="src/img/gh.jpg" alt="/GithubIcon/">
                 </li>
                 <li>
                     <a href="https://aur.archlinux.org/account/arch-err" target="_blank">AUR</a>
-                    <img src="src/img/arch.png" alt="githubIcon">
+                    <img src="src/img/arch.png" alt="/AURIcon/">
                 </li>
             </ul>
 
@@ -111,6 +144,10 @@
         </h3>
         <span id="bracket"> ]</span>
     </section>
+
+    <div id="warning">
+        <p id="warningText">Notice: The website is currently under development. Images may load slowly and some pages will look wierd on certain screens.</p>
+    </div>
 
 </body>
 </html>
