--- a/tech/index.html
+++ b/tech/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../general.css">
     <title>Technology</title>
+
+    <!--- Favicon stuffs --->
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
+    <!--- Instructions for web scrapers --->
+    <meta name="robots" content="index, follow">
+
+    <meta name="description" content="The personal website of a cyber-nerd.">
+    <meta name="keywords" content="linux, technology, personal, portfolio, cyber, computers, programming, webdevelopment, developer">
+    <meta name="author" content="Jesper Berglund">
+
+    <!--- Facebook specific standard, but many websites use this so it has become almost standard to include --->
+    <meta property="og:site_name" content="JesBer">
+    <meta name="twitter:domain" property="twitter:domain" content="example.org">
+    <meta name="og:title" property="og:title" content="JesBer">
+    <meta property="og:description" content="The personal website of a cyber-nerd.">
+    <meta name="twitter:description" property="twitter:description" content="The personal website of a cyber-nerd.">
+    <meta name="og:image" content="https://www.jesber.xyz/website.png">
+
+    <!--- below is for twitter sharing previews--->
+    <!--- <meta property="twitter:card" content="https://age-that-represents-ylink-to-an-imour-site"> --->
+    <meta name="twitter:image:src" property="twitter:image:src" content="https://www.jesber.xyz/website.png">
+    <meta name="twitter:image" property="twitter:image" content="https://www.jesber.xyz/website.png">
+    <meta name="og:image:alt" property="og:image:alt" content="Website preview">
+
+    <meta property="og:url" content="example.org">
+    <meta property="og:type" content="website">
+
 </head>
 
     <nav>
@@ -32,7 +64,7 @@
     </nav>
 
     <section id="tech">
-        <img src="../src/img/keyboard.jpg" alt="">
+        <img src="../src/img/keyboard.jpg" alt="/Keyboard/">
         <div id="text">
             <h1>Technology</h1>
             <p>
@@ -46,7 +78,7 @@
     </section>
 
     <section id="coding">
-        <img src="../src/img/code.jpg" alt="">
+        <img src="../src/img/code.jpg" alt="/Code/">
         <div id="text">
             <h1>Coding</h1>
             <p>
@@ -59,7 +91,7 @@
     </section>
 
     <section id="linux">
-        <img src="../src/img/ubuntu-shell-prompt.jpg" alt="">
+        <img src="../src/img/ubuntu-shell-prompt.jpg" alt="ShellPrompt/">
         <div id="text">
             <h1>Linux</h1>
             <p>
@@ -95,7 +127,7 @@
     </section>
 
     <section id="design">
-        <img src="../src/img/tower.jpg" alt="">
+        <img src="../src/img/tower.jpg" alt="/Aestethic/">
         <div id="text">
 
             <h1>Design</h1>
@@ -111,7 +143,7 @@
 
 
     <section id="hacking">
-        <img src="../src/img/Hacking_Vmask.png" alt="">
+        <img src="../src/img/Hacking_Vmask.png" alt="/H4ck3r/">
         <div id="text">
 
             <h1>Hacking</h1>
@@ -135,6 +167,10 @@
         </h3>
         <span id="bracket"> ]</span>
     </section>
+
+    <div id="warning">
+        <p id="warningText">Notice: The website is currently under development. Images may load slowly and some pages will look wierd on certain screens.</p>
+    </div>
 
 </body>
 </html>
