--- a/archer/index.html
+++ b/archer/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../general.css">
     <title>Archer</title>
+
+    <!--- Favicon stuffs --->
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
+    <!--- Instructions for web scrapers --->
+    <meta name="robots" content="index, follow">
+
+    <meta name="description" content="The personal website of a cyber-nerd.">
+    <meta name="keywords" content="linux, technology, personal, portfolio, cyber, computers, programming, webdevelopment, developer">
+    <meta name="author" content="Jesper Berglund">
+
+    <!--- Facebook specific standard, but many websites use this so it has become almost standard to include --->
+    <meta property="og:site_name" content="JesBer">
+    <meta name="twitter:domain" property="twitter:domain" content="example.org">
+    <meta name="og:title" property="og:title" content="JesBer">
+    <meta property="og:description" content="The personal website of a cyber-nerd.">
+    <meta name="twitter:description" property="twitter:description" content="The personal website of a cyber-nerd.">
+    <meta name="og:image" content="https://www.jesber.xyz/website.png">
+
+    <!--- below is for twitter sharing previews--->
+    <!--- <meta property="twitter:card" content="https://age-that-represents-ylink-to-an-imour-site"> --->
+    <meta name="twitter:image:src" property="twitter:image:src" content="https://www.jesber.xyz/website.png">
+    <meta name="twitter:image" property="twitter:image" content="https://www.jesber.xyz/website.png">
+    <meta name="og:image:alt" property="og:image:alt" content="Website preview">
+
+    <meta property="og:url" content="example.org">
+    <meta property="og:type" content="website">
+
 </head>
 
     <nav>
@@ -32,7 +64,7 @@
     </nav>
 
     <section id="linux">
-        <img src="../src/img/Archer.png" alt="">
+        <img src="../src/img/Archer.png" alt="/Screenshot/">
         <div id="text">
             <h1>Archer</h1>
             <p>
@@ -45,7 +77,7 @@
     </section>
 
     <section id="bspwm">
-        <img src="../src/img/bspwm.png" alt="">
+        <img src="../src/img/bspwm.png" alt="/BSPWM/">
         <div id="text">
             <h1>BSPWM</h1>
             <p>
@@ -105,7 +137,7 @@
             </p>
         </div>
         <div id="text">
-            <h1>Shell S3cripting</h1>
+            <h1>Shell Scripting</h1>
             <p>
                 The thing I probably love most about linux is that everything is a file in linux, and if you are working with plaintext,
                 it is very easy to do tons of work with short, simple, shell scripts.
@@ -126,7 +158,7 @@
     </section>
 
     <section id="miniprogs">
-        <img src="../src/img/tux.png" alt="">
+        <img src="../src/img/tux.png" alt="/Tux/">
         <div id="text">
             <h1>Minimal Programs</h1>
             <p>
@@ -152,6 +184,10 @@
         </h3>
         <span id="bracket"> ]</span>
     </section>
+
+    <div id="warning">
+        <p id="warningText">Notice: The website is currently under development. Images may load slowly and some pages will look wierd on certain screens.</p>
+    </div>
 
 </body>
 </html>
