Update: Added responsiveness for Home/About page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 
     <!--- Favicon stuffs --->
@@ -43,7 +43,7 @@
 </head>
 
     <nav>
-        <ul id="links">2
+        <ul id="links">
             <li id="l1">
                 <a href="tech/">
                     /Technologies/
@@ -84,8 +84,10 @@
     </div>
 
     <section id="whoami">
-        <h1>$ whoami</h1>
         <div id="text">
+          <div id="inner-div">
+            <h1>$ whoami</h1>
+            
             <p>
                 Hey! 
                <br>
@@ -96,6 +98,8 @@
                 Except maybe Linux, since I'm a hardcore Linux nerd and spend way too much time tweaking and tinkering with my OS.
                 <br>
             </p>
+          </div>
+
             <div id="vertical-separator"></div>
             <ul>
                 <li> │ Interests</li>
@@ -113,10 +117,9 @@
     </section>
 
     <section id="contact">
-        <h1>Contact</h1>
+        <img src="src/img/phone.jpg" alt="/Phone/">
         <div id="text">
-
-            <img src="src/img/phone.jpg" alt="/Phone/">
+        <h1>Contact</h1>
             <ul>
                 <li>
                     <a href="mailto: archer@jesber.xyz" target="_blank">Mail</a>
@@ -124,7 +127,7 @@
                 </li>
                 <li>
                     <a href="https://github.com/arch-err" target="_blank">GitHub</a>
-                    <img src="src/img/gh.jpg" alt="/GithubIcon/">
+                    <img src="src/img/gh.png" alt="/GithubIcon/">
                 </li>
                 <li>
                     <a href="https://aur.archlinux.org/account/arch-err" target="_blank">AUR</a>
