--- a/tech/index.html
+++ b/tech/index.html
@@ -118,7 +118,7 @@
             <h1>Typesetting</h1>
             <p>
                 Creating professional and good looking documents is one of my most unusual interests.
-                Typesetting utilizing systems like LaTeX, Markdown and Groff/Troff is something I think everyone should start doing.
+                Typesetting, utilizing systems like LaTeX, Markdown and Groff/Troff, is something I think everyone should start doing.
                 These systems make creating documents easier and more scalable, and they look professional.
                 I suppose this odd interest is genetic,
                 since my grandfather spent his whole life working with typesetting and printing
